--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nilsonmorais/bs4-js",
-    "version": "0.0.26",
+    "version": "0.0.40",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -10,7 +10,11 @@
     "author": "Nilson Morais",
     "license": "MIT",
     "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
         "grunt": "^1.0.1",
-        "grunt-bump": "^0.8.0"
+        "grunt-babel": "^7.0.0",
+        "grunt-bump": "^0.8.0",
+        "grunt-contrib-copy": "^1.0.0"
     }
 }
